--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "node-cache": "^5.1.2",
     "pg": "^8.12.0",
     "plaid": "^26.0.0"
   },
